# Copilot-Webhook-Orchestrator

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01-feature-request.yml  02-user-story.yml  03-bug-report.yml  04-architecture-decision.yml  05-technical-debt.yml  06-test-case-gap.yml  07-release-request.yml  08-incident-report.yml  config.yml
.github/agents/: a11y-guardian.agent.md  arch-spec-author.agent.md  ci-quality-gate.agent.md  code-reviewer.agent.md  implementation-design.agent.md  implementation-driver.agent.md  incident-scribe.agent.md  merge-readiness-auditor.agent.md  prod-risk-and-rollback-gate.agent.md  release-pipeline-author.agent.md  requirements.agent.md  review-comment-fixer.agent.md  risk-and-nfr-gate.agent.md  runbook-and-ops-docs.agent.md  story-builder.agent.md  story-quality-gate.agent.md  test-drafter.agent.md  test-truth-and-stability-gate.agent.md  ui-scaffolder.agent.md
.github/instructions/: issue-output.instructions.md
.github/prompts/: story-to-issue-form.prompt.md
.github/skills/git-commit-message/: SKILL.md
docs/: copilot-workflow-orchestrator-feature-onepager.md  copilot-workflow-orchestrator-requirements.md  phase-1-user-stories.md
docs/architecture/: phase-1-api-contract.md  phase-1-architecture-brief.md  phase-1-data-model.md  phase-1-diagrams.md  phase-1-risk-nfr-review.md
docs/architecture/adr/: ADR-001-fastapi-sqlmodel.md  ADR-002-sync-webhook-processing.md  ADR-003-database-sessions.md  ADR-004-uv-package-management.md  ADR-005-frontend-stack.md
docs/best_practices/: AGENTS-md-best-practices.md  copilot-agent-skills-best-practices.md  copilot-code-reviewer-agent-research.md  copilot-custom-agents-best-practices.md  git-commit-message-best-practices.md  github-issues-best-practices-web-dev.md  github-readme-best-practices.md  tdd-best-practices.md
docs/testing/: phase-1-coverage-map.md
src/backend/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/backend/app/: __init__.py  cli.py  config.py  main.py
src/backend/app/api/: deps.py  schemas.py
src/backend/app/api/routers/: __init__.py  auth.py  events.py  health.py  installations.py  repositories.py  webhooks.py
src/backend/app/db/: engine.py
src/backend/app/db/models/: __init__.py  base.py  event.py  installation.py  repository.py  session.py  user.py
src/backend/app/services/: auth.py  crypto.py  github.py  github_api.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: test_auth.py  test_events.py  test_health.py  test_installations.py  test_webhooks.py
src/backend/tests/unit/: __init__.py  test_crypto.py
src/frontend/: .prettierignore  AGENTS.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
src/frontend/src/: app.css  app.html
(+43 files in other folders)
